# dream-email-example

./: README.md  docker-compose.yml  dream-email-example.opam  dune  dune-project  email.ml  run.sh  template.eml.ml
