(executable
 (name email)
 (libraries dream emile amqp-client-lwt cohttp cohttp-lwt-unix)
 (preprocess (pps lwt_ppx ppx_yojson_conv)))

(rule
 (targets template.ml)
 (deps template.eml.ml)
 (action (run dream_eml %{deps} --workspace %{workspace_root})))

(data_only_dirs _esy esy.lock lib node_modules)
